# ghc-web-test

./: .gitignore  .gitmodules  README.md  build_haskell.sh  build_raylib.sh  index.html  package-lock.json  package.json  webpack.config.js
cbits/: rl_bindings.c  rl_bindings.h
haskell/: build.sh  cabal.project  haskell.cabal
haskell/app/: Exports.hs  Hello.hs  Native.hs  Processable.hs  Program.hs  Raylib.hs
haskell/cbits/: main.c  main.h
src/: index.ts  raylib.js  util.ts  wasi_patch.ts
