cabal-version:      3.0
name:               haskell
version:            0.1.0.0

executable haskell
    main-is:          Hello.hs
    build-depends:    base >=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

    c-sources: cbits/main.c
    include-dirs: cbits
    ghc-options:
        -no-hs-main
        -optl-mexec-model=reactor
        -optl-Wl,--export=hs_init,--export=test,--export=mallocBytes,--export=hsFree
